--- a/ebook_webapp/templates/index.html
+++ b/ebook_webapp/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Welcome to Your Ebook Collection</h1>
-<p>Use the search bar above to find your ebooks by title or author.</p>
+<p>Use the search bar to find your ebooks by title or author.</p>
 {% endblock %}
