--- a/ebook_webapp/templates/book.html
+++ b/ebook_webapp/templates/book.html
@@ -5,7 +5,9 @@
     <h2>{{ ebook.title }}</h2>
     <h3>by {{ ebook.author }}</h3>
     <img src="{{ url_for('static', filename=ebook.cover_path.split('static/')[-1]) }}" alt="Cover" class="ebook-cover">
-    <p>{{ ebook.metadata }}</p>
+    <p>Description: <br>{{ ebook.description }}</p>
+    <p>Language: {{ ebook.language }}</p>
+    <p>Genre: {{ ebook.genre }}</p>
     <div class="actions">
         <a href="{{ url_for('download_ebook', ebook_id=ebook.id) }}" class="button">Download EPUB</a>
         <a href="{{ url_for('download_mobi', ebook_id=ebook.id) }}" class="button">Download MOBI</a>
