--- a/ebook_webapp/templates/search.html
+++ b/ebook_webapp/templates/search.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h2>Search Results for "{{ query }}"</h2>
+<a href="{{ url_for('index') }}" class="button-main-menu">Return to Main Menu</a>
 {% if results %}
     <ul>
         {% for ebook in results %}
