--- a/ebook_webapp/templates/book.html
+++ b/ebook_webapp/templates/book.html
@@ -3,15 +3,14 @@
 {% block content %}
 <div class="ebook-info">
     <h2>{{ ebook.title }}</h2>
-    <h3>by {{ ebook.author }}</h3>
+    <h3>by <a href="{{ url_for('author_books', author_name=ebook.author) }}">{{ ebook.author }}</a></h3>
     <img src="{{ url_for('static', filename=ebook.cover_path.split('static/')[-1]) }}" alt="Cover" class="ebook-cover">
     <p>Description: <br>{{ ebook.description }}</p>
     <p>Language: {{ ebook.language }}</p>
-    <p>Genre: {{ ebook.genre }}</p>
+    <p>Genre: <a href="{{ url_for('search_genre', genre_name=ebook.genre) }}">{{ ebook.genre }}</a></p>
     <div class="actions">
         <a href="{{ url_for('download_ebook', ebook_id=ebook.id) }}" class="button">Download EPUB</a>
         <a href="{{ url_for('download_mobi', ebook_id=ebook.id) }}" class="button">Download MOBI</a>
     </div>
-    <a href="{{ url_for('index') }}" class="button-main-menu">Return to Main Menu</a>
 </div>
 {% endblock %}
