handle errors in populate_db + prevent already existing file to be added + add gitignore

--- a/ebook_webapp/templates/base.html
+++ b/ebook_webapp/templates/base.html
@@ -13,14 +13,13 @@
         </nav>
     </header>
     <main>
+        <div class="base">
+            <form action="{{ url_for('search') }}" method="get">
+                <input type="text" name="q" placeholder="Search by title or author" required>
+                <button type="submit">Search</button>
+            </form> <a href="{{ url_for('index') }}" class="button-main-menu">Return to Main Menu</a>
+        </div>
         {% block content %}{% endblock %}
     </main>
-    <div class="base">
-        <form action="{{ url_for('search') }}" method="get">
-            <input type="text" name="q" placeholder="Search by title or author" required>
-            <button type="submit">Search</button>
-        </form>
-        <a href="{{ url_for('index') }}" class="button-main-menu">Return to Main Menu</a>
-    </div>
 </body>
 </html>
