--- a/ebook_webapp/templates/authors.html
+++ b/ebook_webapp/templates/authors.html
@@ -5,8 +5,25 @@
 <ul>
     {% for author in authors %}
         <li>
-            <a href="{{ url_for('author_books', author_name=author) }}">{{ author }}</a>
+            <a href="{{ url_for('author_books', author_name=author[0]) }}">{{ author[0] }}</a>
         </li>
     {% endfor %}
 </ul>
+<div class="pagination">
+    {% if authors.has_prev %}
+        <a href="{{ url_for('authors', page=authors.prev_num, per_page=request.args.get('per_page', 10)) }}" class="button">Previous</a>
+    {% endif %}
+    <span>Page {{ authors.page }} of {{ authors.pages }}</span>
+    {% if authors.has_next %}
+        <a href="{{ url_for('authors', page=authors.next_num, per_page=request.args.get('per_page', 10)) if authors.has_next else '#' }}" class="button">Next</a>
+    {% endif %}
+    <form action="{{ url_for('authors') }}" method="get" class="per-page-form">
+        <label for="per_page">Items per page:</label>
+        <select name="per_page" id="per_page" onchange="this.form.submit()">
+            <option value="10" {% if request.args.get('per_page', 10) == 10 %}selected{% endif %}>10</option>
+            <option value="20" {% if request.args.get('per_page', 10) == 20 %}selected{% endif %}>20</option>
+            <option value="50" {% if request.args.get('per_page', 10) == 50 %}selected{% endif %}>50</option>
+        </select>
+    </form>
+</div>
 {% endblock %}
